--- a/docs/content/nav/header.mdx
+++ b/docs/content/nav/header.mdx
@@ -1,4 +1,4 @@
-# [QuickDocs](/)
+# [Decal](/)
 
 - [<GithubIcon />](https://github.com/steveruizok/quick-docs)
 - [<TwitterIcon />](https://twitter.com/steveruizok)
